--- a/.github/workflows/push-aur.yml
+++ b/.github/workflows/push-aur.yml
@@ -151,11 +151,27 @@ jobs:
           VERSION="${{ steps.get_version.outputs.VERSION }}"
           echo "Generating .SRCINFO for version: $VERSION using makepkg"
 
-          # 使用 Docker 运行 makepkg 生成 .SRCINFO
+          # 使用 Docker 创建普通用户并运行 makepkg
           docker run --rm -v $PWD:/workspace -w /workspace archlinux:latest bash -c "
-            pacman -Sy --noconfirm base-devel && \
-            makepkg --printsrcinfo > .SRCINFO
+          # 更新包数据库并安装必要工具
+          pacman -Sy --noconfirm base-devel sudo && \
+
+          # 创建 builder 用户
+          useradd -m builder && \
+          echo 'builder ALL=(ALL) NOPASSWD: ALL' >> /etc/sudoers && \
+
+          # 确保工作目录权限正确
+          chown -R builder:builder /workspace && \
+
+          # 以 builder 用户运行 makepkg
+          sudo -u builder makepkg --printsrcinfo > .SRCINFO
           "
+
+          # 检查是否成功生成
+          if [ ! -f ".SRCINFO" ]; then
+            echo "❌ Failed to generate .SRCINFO"
+            exit 1
+          fi
 
           echo "✅ Generated .SRCINFO:"
           cat .SRCINFO
