--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "sea-lantern"
-version = "0.6.2"
+version = "0.6.5"
 description = "Minecraft Server Manager"
 authors = ["FPS_Z"]
 edition = "2021"
@@ -51,7 +51,10 @@ tar = "0.4"
 flate2 = "1.0"
 
 [target.'cfg(windows)'.dependencies]
-windows = { version = "0.58", features = ["Win32_System_Performance", "Win32_Foundation"] }
+windows = { version = "0.58", features = [
+    "Win32_System_Performance",
+    "Win32_Foundation",
+] }
 winreg = "0.52"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
